--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ main div.main_wrap{
     display: flex;
     align-items: flex-end;
     justify-content: center;
-  }[InternetShortcut]
-URL=https://github.com/Topeeee1/cleo/blob/main/style.css
+  }
 
   
   main div.main_wrap p{
