--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main div.main_wrap{
 
   
   main div.main_wrap p{
-    background-image: url(imagecopy.jpg);
+   background-image: url(coverphoto.jpg);
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: contain;
