--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ main div.main_wrap{
 
   
   main div.main_wrap p{
-   background-image: url(coverphoto.jpg);
+   background-image: url("https://Topeeee1.github.io/coverphoto.jpg");
+    
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: contain;
