--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ main div.main_wrap{
     height: 100vh;
     overflow: hidden;
     display: flex;
-    align-items: flex-end;
+    align-items:center;
     justify-content: center;
   }
 
